# krang

./: .gitignore  Cargo.toml  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml  README.md
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  eye.rs  lib.rs
www/: index.html  index.js
yew-app/: Cargo.toml  README.md  index.html
yew-app/src/: main.rs
yew-blog/: Cargo.toml  index.html
yew-blog/src/: main.rs
yew-blog2/: Cargo.toml  build.rs  package-lock.json  package.json
yew-blog2/tests/: web.rs
